
[Bugs fixed]
 - Fixed issue with error status preventing the setting of response headers with Servlet containers like Tomcat. Report and solution by Evan DiBiase.
 - Completed support for content streaming in the HTTP client connector extension. Issue reported by Mikkel Jensen.
 - Fixed bug in ParameterList.getFirstValue(String, boolean) ignoring the "ignoreCase" parameter.
 
[API breaking changes]
 - Moved hasInput() method from org.restlet.connector.Client to Call.isInputAvailable().
 - Renamed Representation.isContentAvailable() to isAvailable() and isContentTransient() to isTransient().
 - Application now only requires a Context and not a Container.
 - WrapperRestlet.getWrappedRestlet() is now protected instead of public, only subclasses should have access to the wrapped Restlet.
 - Merged Client and GenericClient into a single Client class.
 - Moved com.noelios.restlet.connector into hidden com.noelios.restlet.impl.connector package.
 - Moved internal utilities from com.noelios.restlet.util into hidden com.noelios.restlet.impl.util package.
 - Moved com.noelios.restlet.spi into hidden com.noelios.restlet.impl package.
 - Moved org.restlet.component.ContainerContext to com.noelios.restlet.impl.component.ContainerContext.
 - Renamed Server."next" property into "target". "Next" was assuming that a previous Restlet existed, which is false for Server connectors.
 - Removed static Restlet.handle(Call call, Restlet target) method. Now Restlet automatically start themselves on first call.
 - Moved com.noelios.restlet.util.WrapperMap into org.restlet.util.
 - Removed Restlet.compareTo() method. No apparent usage.
 - Renamed Reference.getProtocol() into getSchemeProtocol().
 - Connector and Component no longer derive from Restlet, it was allowing some code reuse but also created some confusion between those core concepts.
 - Scorer now derives from Filter to improve factorization.