@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Fri Sep 29 12:33:40 CEST 2006
-build.number=302
+#Fri Sep 29 15:57:35 CEST 2006
+build.number=306
