@@ -25,14 +25,15 @@ package org.restlet;
 import java.util.logging.Logger;
 
 import org.restlet.connector.ClientInterface;
+import org.restlet.data.Method;
 import org.restlet.data.ParameterList;
-import org.restlet.data.Protocol;
+import org.restlet.data.Representation;
 
 /**
  * Context associated with a Restlet.
  * @author Jerome Louvel (contact@noelios.com) <a href="http://www.noelios.com/">Noelios Consulting</a>
  */
-public class Context
+public class Context implements ClientInterface
 {
    /** The modifiable list of parameters. */
    private ParameterList parameters;
@@ -57,34 +58,116 @@ public class Context
    {
    	this.logger = logger;
    }
-
-   /**
-    * Returns a client delegate for the given protocol.
-    * @param protocol The protocol required.
-    * @return A client delegate for the given protocol or null if it isn't available.
-    */
-   public ClientInterface getClient(Protocol protocol)
-   {
-      throw new UnsupportedOperationException("This context doesn't dispatch calls");
-   }
    
-   /**
-    * Gets the client delegate for the call's target resource based on the reference's scheme protocol,
-    * then use it to handle the given call.
+	/**
+    * Handles a call.
     * @param call The call to handle.
     */
    public void handle(Call call)
    {
-   	ClientInterface client = getClient(call.getResourceRef().getSchemeProtocol());
-   	
-   	if(client != null)
-   	{
-   		client.handle(call);
-   	}
-   	else
-   	{
-         throw new RuntimeException("Unable to find a client delegate for the protocol: " + call.getResourceRef().getSchemeProtocol().getName());
-   	}
+      throw new UnsupportedOperationException("This context doesn't support the sending of client calls.");
+   }
+   
+   /**
+    * Deletes the identified resource.
+    * @param resourceUri The URI of the resource to delete.
+    * @return The returned uniform call.
+    */
+   public Call delete(String resourceUri)
+   {
+      Call call = new Call();
+      call.setResourceRef(resourceUri);
+      call.setMethod(Method.DELETE);
+      handle(call);
+      return call;
+   }
+   
+   /**
+    * Gets the identified resource.
+    * @param resourceUri The URI of the resource to get.
+    * @return The returned uniform call.
+    */
+   public Call get(String resourceUri)
+   {
+      Call call = new Call();
+      call.setResourceRef(resourceUri);
+      call.setMethod(Method.GET);
+      handle(call);
+      return call;
+   }
+   
+   /**
+    * Gets the identified resource without its representation's content.
+    * @param resourceUri The URI of the resource to get.
+    * @return The returned uniform call.
+    */
+   public Call head(String resourceUri)
+   {
+      Call call = new Call();
+      call.setResourceRef(resourceUri);
+      call.setMethod(Method.HEAD);
+      handle(call);
+      return call;
+   }
+   
+   /**
+    * Gets the options for the identified resource.
+    * @param resourceUri The URI of the resource to get.
+    * @return The returned uniform call.
+    */
+   public Call options(String resourceUri)
+   {
+      Call call = new Call();
+      call.setResourceRef(resourceUri);
+      call.setMethod(Method.OPTIONS);
+      handle(call);
+      return call;
+   }
+
+   /**
+    * Post a representation to the identified resource.
+    * @param resourceUri The URI of the resource to post to.
+    * @param input The input representation to post.
+    * @return The returned uniform call.
+    */
+	public Call post(String resourceUri, Representation input)
+   {
+      Call call = new Call();
+      call.setResourceRef(resourceUri);
+      call.setMethod(Method.POST);
+      call.setInput(input);
+      handle(call);
+      return call;
+   }
+
+   /**
+    * Puts a representation in the identified resource.
+    * @param resourceUri The URI of the resource to modify.
+    * @param input The input representation to put.
+    * @return The returned uniform call.
+    */
+   public Call put(String resourceUri, Representation input)
+   {
+      Call call = new Call();
+      call.setResourceRef(resourceUri);
+      call.setMethod(Method.PUT);
+      call.setInput(input);
+      handle(call);
+      return call;
+   }
+   
+   /**
+    * Tests the identified resource.
+    * @param resourceUri The URI of the resource to delete.
+    * @return The returned uniform call.
+    */
+   public Call trace(String resourceUri)
+   {
+      Call call = new Call();
+      call.setResourceRef(resourceUri);
+      call.setMethod(Method.TRACE);
+      handle(call);
+      return call;
    }
    
    /**
@@ -104,7 +187,7 @@ public class Context
    {
       this.logger = logger;
    }
-   
+
    /**
     * Returns the modifiable list of parameters.
     * @return The modifiable list of parameters.
