@@ -48,7 +48,7 @@
 <h3>Development</h3>
 <ul>
    <li><a target="_top" href="http://www.restlet.org/roadmap">Road map</a> with goals and timeline</li>
-   <li><a target="_top" href="http://www.restlet.org/downloads/restlet-1.0b18.zip">Download</a> the <b>1.0 beta 18</b> release (<a target="_top" href="http://www.restlet.org/docs/changes">changes log</a>)</li>
+   <li><a target="_top" href="http://www.restlet.org/downloads/restlet-1.0b19.zip">Download</a> the <b>1.0 beta 19</b> release (<a target="_top" href="http://www.restlet.org/docs/changes">changes log</a>)</li>
    <li><a target="_top" href="http://www.restlet.org/discuss">Discuss</a> with users and developers</li>
    <li><a target="_top" href="http://restlet.tigris.org/servlets/ProjectIssues">Report issues</a> (bugs, enhancements)</li>
    <li><a target="_top" href="http://restlet.tigris.org">Development site</a> (provided by <a target="_top" href="http://www.collab.net/products/community_edition.html">CollabNet</a>)</li>
@@ -77,7 +77,7 @@
    <table>
       <tr>
          <td style="vertical-align: middle;" rowspan="2"><a target="_top" href="http://www.java.net/"><img src="http://www.restlet.org/images/javanet.gif" alt="java.net member" /></a></td>
-         <td>Last modified on 2006-08-19</td>
+         <td>Last modified on 2006-09-29</td>
       </tr>
       <tr>
          <td>Copyright &copy; 2005-2006 <a href="mailto:contact@noelios.com">J&eacute;r&ocirc;me Louvel</a>. Restlet is a registered trademark of <a target="_top" href="http://www.noelios.com">Noelios Consulting</a>.</td>
